--- a/packages/atoms/emulation/app-emulation/virtualbox-bin/definition.yaml
+++ b/packages/atoms/emulation/app-emulation/virtualbox-bin/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-bin
-version: 7.0.10.158379+1
+version: 7.0.12.159484
 category: app-emulation
 use_flags:
 - -headless
@@ -58,25 +58,25 @@ uri:
 - https://www.virtualbox.org/
 license: GPL-2 PUEL
 labels:
-  DEPEND: app-arch/unzip python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
-    ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python2_7?
-    ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_10? ( dev-lang/python:3.10
-    ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python2_7(-),-python_single_target_python3_10(-)]
+  DEPEND: app-arch/unzip python_targets_python3_10? ( dev-lang/python:3.10 ) python_targets_python3_7?
+    ( dev-lang/python:3.7 ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
+    ( dev-lang/python:3.8 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7
+    ) >=dev-lang/python-exec-2:=[python_targets_python3_10(-)?,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,-python_single_target_python3_10(-),-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python2_7(-)]
     >=app-portage/elt-patches-20170815 app-arch/xz-utils dev-util/desktop-file-utils
     x11-misc/shared-mime-info virtual/pkgconfig
-  IUSE: +additions doc headless python vboxwebsrv rdesktop-vrdp sdk python_targets_python3_7
-    python_targets_python3_9 python_targets_python3_8 python_targets_python2_7 python_targets_python3_10
-  RDEPEND: '!app-emulation/virtualbox-additions ~app-emulation/virtualbox-modules-7.0.10
+  IUSE: +additions doc headless python vboxwebsrv rdesktop-vrdp sdk python_targets_python3_10
+    python_targets_python3_7 python_targets_python3_9 python_targets_python3_8 python_targets_python2_7
+  RDEPEND: '!app-emulation/virtualbox-additions ~app-emulation/virtualbox-modules-7.0.12
     !headless? ( dev-libs/glib media-libs/fontconfig media-libs/freetype media-libs/libpng
     media-libs/libsdl[X] x11-libs/libXcursor x11-libs/libXext x11-libs/libXfixes x11-libs/libXft
     x11-libs/libXi x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXrender ) dev-libs/libxml2
     sys-fs/lvm2 x11-libs/libXau x11-libs/libX11 x11-libs/libXt x11-libs/libXmu x11-libs/libSM
-    x11-libs/libICE x11-libs/libXdmcp python_targets_python3_7? ( dev-lang/python:3.7
-    ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
-    ( dev-lang/python:3.8 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7
-    ) python_targets_python3_10? ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python2_7(-),-python_single_target_python3_10(-)]'
+    x11-libs/libICE x11-libs/libXdmcp python_targets_python3_10? ( dev-lang/python:3.10
+    ) python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
+    ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python2_7?
+    ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python3_10(-)?,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,-python_single_target_python3_10(-),-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python2_7(-)]'
   emerge.packages: app-emulation/virtualbox-bin
   kit: core-kit
   original.package.name: app-emulation/virtualbox-bin
   original.package.slot: "0"
-  original.package.version: 7.0.10.158379
+  original.package.version: 7.0.12.159484
