--- a/Dockerfile.devel
+++ b/Dockerfile.devel
@@ -8,12 +8,14 @@ ENV USER=root
 
 RUN [ \
   "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
   "repository/mottainai-stable", \
   "repository/macaroni-commons", \
   "repository/macaroni-terragon"]
 
 RUN [ \
   "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
   "--skip-config-protect", \
   "system/entities", \
   "system/luet-geaaru-thin", \
