--- a/packages/kernels/5.4/virtualbox-guest-additions/definition.yaml
+++ b/packages/kernels/5.4/virtualbox-guest-additions/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-guest-additions
-version: 7.0.10.158379+4
+version: 7.0.12.159484
 category: kernel-5.4
 provides:
 - name: virtualbox-guest-additions
