--- a/packages/kernels/5.15/virtualbox-modules/definition.yaml
+++ b/packages/kernels/5.15/virtualbox-modules/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-modules
-version: 7.0.10.158379+2
+version: 7.0.12.159484
 category: kernel-5.15
 requires:
 - name: virtualbox-common
