--- a/packages/kernels/6.1/virtualbox-modules/definition.yaml
+++ b/packages/kernels/6.1/virtualbox-modules/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-modules
-version: 7.0.10.158379+3
+version: 7.0.12.159484
 category: kernel-6.1
 requires:
 - name: virtualbox-common
