--- a/packages/atoms/devtools/dev-util/mongodb-compass/definition.yaml
+++ b/packages/atoms/devtools/dev-util/mongodb-compass/definition.yaml
@@ -1,5 +1,5 @@
 name: mongodb-compass
-version: 1.40.3
+version: 1.40.4
 category: dev-util
 annotations:
   subsets:
@@ -18,4 +18,4 @@ labels:
   kit: dev-kit
   original.package.name: dev-util/mongodb-compass
   original.package.slot: "0"
-  original.package.version: 1.40.3
+  original.package.version: 1.40.4-r1
