--- a/packages/atoms/desktop/media-gfx/inkscape/definition.yaml
+++ b/packages/atoms/desktop/media-gfx/inkscape/definition.yaml
@@ -1,5 +1,5 @@
 name: inkscape
-version: "1.3"
+version: 1.3.2
 category: media-gfx
 use_flags:
 - -graphicsmagick
@@ -102,16 +102,19 @@ license: GPL-2 LGPL-2.1
 labels:
   BDEPEND: dev-util/glib-utils >=dev-util/intltool-0.40 >=sys-devel/gettext-0.17 virtual/pkgconfig
     test? ( virtual/imagemagick-tools ) dev-util/ninja dev-util/cmake
-  DEPEND: python_single_target_python3_7? ( dev-lang/python:3.7[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_7]
+  DEPEND: python_single_target_python3_10? ( dev-lang/python:3.10[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_10]
+    ) python_single_target_python3_7? ( dev-lang/python:3.7[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_7]
     ) python_single_target_python3_9? ( dev-lang/python:3.9[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_9]
     ) python_single_target_python3_8? ( dev-lang/python:3.8[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_8]
-    ) python_single_target_python3_10? ( dev-lang/python:3.10[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_10]
     ) >=app-text/poppler-0.57.0:=[cairo] >=dev-cpp/cairomm-1.12:0 >=dev-cpp/glibmm-2.54.1:2
     dev-cpp/gtkmm:3.0 >=dev-cpp/pangomm-2.40:1.4 >=dev-libs/boehm-gc-7.1:= dev-libs/boost:=[stacktrace]
     dev-libs/double-conversion:= >=dev-libs/glib-2.41 >=dev-libs/libsigc++-2.8:2 >=dev-libs/libxml2-2.7.4
     >=dev-libs/libxslt-1.1.25 dev-libs/gdl:3 dev-libs/popt media-gfx/potrace media-libs/fontconfig
     media-libs/freetype:2 media-libs/lcms:2 media-libs/libpng:0= net-libs/libsoup:2.4
     sci-libs/gsl:= >=x11-libs/pango-1.44 x11-libs/gtk+:3[X?] X? ( x11-libs/libX11
+    ) python_single_target_python3_10? ( dev-python/cachecontrol[python_targets_python3_10(-)]
+    dev-python/cssselect[python_targets_python3_10(-)] dev-python/lockfile[python_targets_python3_10(-)]
+    dev-python/lxml[python_targets_python3_10(-)] media-gfx/scour[python_targets_python3_10(-)]
     ) python_single_target_python3_7? ( dev-python/cachecontrol[python_targets_python3_7(-)]
     dev-python/cssselect[python_targets_python3_7(-)] dev-python/lockfile[python_targets_python3_7(-)]
     dev-python/lxml[python_targets_python3_7(-)] media-gfx/scour[python_targets_python3_7(-)]
@@ -121,9 +124,6 @@ labels:
     ) python_single_target_python3_8? ( dev-python/cachecontrol[python_targets_python3_8(-)]
     dev-python/cssselect[python_targets_python3_8(-)] dev-python/lockfile[python_targets_python3_8(-)]
     dev-python/lxml[python_targets_python3_8(-)] media-gfx/scour[python_targets_python3_8(-)]
-    ) python_single_target_python3_10? ( dev-python/cachecontrol[python_targets_python3_10(-)]
-    dev-python/cssselect[python_targets_python3_10(-)] dev-python/lockfile[python_targets_python3_10(-)]
-    dev-python/lxml[python_targets_python3_10(-)] media-gfx/scour[python_targets_python3_10(-)]
     ) cdr? ( app-text/libwpg:0.3 dev-libs/librevenge media-libs/libcdr ) exif? ( media-libs/libexif
     ) imagemagick? ( !graphicsmagick? ( media-gfx/imagemagick:=[cxx] ) graphicsmagick?
     ( media-gfx/graphicsmagick:=[cxx] ) ) jemalloc? ( dev-libs/jemalloc ) jpeg? (
@@ -132,19 +132,22 @@ labels:
     ( app-text/libwpg:0.3 dev-libs/librevenge ) test? ( dev-cpp/gtest ) dev-util/desktop-file-utils
     x11-misc/shared-mime-info
   IUSE: cdr dia exif graphicsmagick imagemagick inkjar jemalloc jpeg nls openmp postscript
-    readline spell svg2 test visio wpg X python_single_target_python3_7 python_single_target_python3_9
-    python_single_target_python3_8 python_single_target_python3_10 python_targets_python3_7
-    python_targets_python3_9 python_targets_python3_8 python_targets_python3_10
-  RDEPEND: python_single_target_python3_7? ( dev-lang/python:3.7[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_7]
+    readline spell svg2 test visio wpg X python_single_target_python3_10 python_single_target_python3_7
+    python_single_target_python3_9 python_single_target_python3_8 python_targets_python3_10
+    python_targets_python3_7 python_targets_python3_9 python_targets_python3_8
+  RDEPEND: python_single_target_python3_10? ( dev-lang/python:3.10[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_10]
+    ) python_single_target_python3_7? ( dev-lang/python:3.7[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_7]
     ) python_single_target_python3_9? ( dev-lang/python:3.9[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_9]
     ) python_single_target_python3_8? ( dev-lang/python:3.8[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_8]
-    ) python_single_target_python3_10? ( dev-lang/python:3.10[xml(+)] >=dev-lang/python-exec-2:=[python_targets_python3_10]
     ) >=app-text/poppler-0.57.0:=[cairo] >=dev-cpp/cairomm-1.12:0 >=dev-cpp/glibmm-2.54.1:2
     dev-cpp/gtkmm:3.0 >=dev-cpp/pangomm-2.40:1.4 >=dev-libs/boehm-gc-7.1:= dev-libs/boost:=[stacktrace]
     dev-libs/double-conversion:= >=dev-libs/glib-2.41 >=dev-libs/libsigc++-2.8:2 >=dev-libs/libxml2-2.7.4
     >=dev-libs/libxslt-1.1.25 dev-libs/gdl:3 dev-libs/popt media-gfx/potrace media-libs/fontconfig
     media-libs/freetype:2 media-libs/lcms:2 media-libs/libpng:0= net-libs/libsoup:2.4
     sci-libs/gsl:= >=x11-libs/pango-1.44 x11-libs/gtk+:3[X?] X? ( x11-libs/libX11
+    ) python_single_target_python3_10? ( dev-python/cachecontrol[python_targets_python3_10(-)]
+    dev-python/cssselect[python_targets_python3_10(-)] dev-python/lockfile[python_targets_python3_10(-)]
+    dev-python/lxml[python_targets_python3_10(-)] media-gfx/scour[python_targets_python3_10(-)]
     ) python_single_target_python3_7? ( dev-python/cachecontrol[python_targets_python3_7(-)]
     dev-python/cssselect[python_targets_python3_7(-)] dev-python/lockfile[python_targets_python3_7(-)]
     dev-python/lxml[python_targets_python3_7(-)] media-gfx/scour[python_targets_python3_7(-)]
@@ -154,22 +157,19 @@ labels:
     ) python_single_target_python3_8? ( dev-python/cachecontrol[python_targets_python3_8(-)]
     dev-python/cssselect[python_targets_python3_8(-)] dev-python/lockfile[python_targets_python3_8(-)]
     dev-python/lxml[python_targets_python3_8(-)] media-gfx/scour[python_targets_python3_8(-)]
-    ) python_single_target_python3_10? ( dev-python/cachecontrol[python_targets_python3_10(-)]
-    dev-python/cssselect[python_targets_python3_10(-)] dev-python/lockfile[python_targets_python3_10(-)]
-    dev-python/lxml[python_targets_python3_10(-)] media-gfx/scour[python_targets_python3_10(-)]
     ) cdr? ( app-text/libwpg:0.3 dev-libs/librevenge media-libs/libcdr ) exif? ( media-libs/libexif
     ) imagemagick? ( !graphicsmagick? ( media-gfx/imagemagick:=[cxx] ) graphicsmagick?
     ( media-gfx/graphicsmagick:=[cxx] ) ) jemalloc? ( dev-libs/jemalloc ) jpeg? (
     media-libs/libjpeg-turbo:= ) readline? ( sys-libs/readline:= ) spell? ( app-text/gspell
     ) visio? ( app-text/libwpg:0.3 dev-libs/librevenge media-libs/libvisio ) wpg?
-    ( app-text/libwpg:0.3 dev-libs/librevenge ) python_single_target_python3_7? (
-    dev-python/numpy[python_targets_python3_7(-)] ) python_single_target_python3_9?
+    ( app-text/libwpg:0.3 dev-libs/librevenge ) python_single_target_python3_10? (
+    dev-python/numpy[python_targets_python3_10(-)] ) python_single_target_python3_7?
+    ( dev-python/numpy[python_targets_python3_7(-)] ) python_single_target_python3_9?
     ( dev-python/numpy[python_targets_python3_9(-)] ) python_single_target_python3_8?
-    ( dev-python/numpy[python_targets_python3_8(-)] ) python_single_target_python3_10?
-    ( dev-python/numpy[python_targets_python3_10(-)] ) dia? ( app-office/dia ) postscript?
+    ( dev-python/numpy[python_targets_python3_8(-)] ) dia? ( app-office/dia ) postscript?
     ( app-text/ghostscript-gpl )
   emerge.packages: media-gfx/inkscape
   kit: media-kit
   original.package.name: media-gfx/inkscape
   original.package.slot: "0"
-  original.package.version: "1.3"
+  original.package.version: 1.3.2
