--- a/packages/atoms/browsers/www-client/google-chrome-unstable/definition.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome-unstable/definition.yaml
@@ -1,5 +1,5 @@
 name: google-chrome-unstable
-version: 120.0.6062.2+2
+version: 121.0.6129.0
 category: www-client
 use_flags:
 - -selinux
@@ -66,4 +66,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/google-chrome-unstable
   original.package.slot: "0"
-  original.package.version: 120.0.6062.2
+  original.package.version: 121.0.6129.0
