--- a/packages/atoms/browsers/www-client/google-chrome-beta/definition.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome-beta/definition.yaml
@@ -1,5 +1,5 @@
 name: google-chrome-beta
-version: 119.0.6045.21+2
+version: 120.0.6099.35
 category: www-client
 use_flags:
 - -selinux
@@ -66,4 +66,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/google-chrome-beta
   original.package.slot: "0"
-  original.package.version: 119.0.6045.21
+  original.package.version: 120.0.6099.35
