--- a/packages/atoms/browsers/www-client/firefox/definition.yaml
+++ b/packages/atoms/browsers/www-client/firefox/definition.yaml
@@ -1,5 +1,5 @@
 name: firefox
-version: 118.0.2
+version: "120.0"
 category: www-client
 use_flags:
 - -clang
@@ -95,9 +95,9 @@ uri:
 - https://www.mozilla.com/firefox
 license: MPL-2.0 GPL-2 LGPL-2.1
 labels:
-  BDEPEND: '|| ( dev-lang/python:3.10[ncurses,sqlite,ssl] dev-lang/python:3.8[ncurses,sqlite,ssl]
-    dev-lang/python:3.9[ncurses,sqlite,ssl] dev-lang/python:3.7[ncurses,sqlite,ssl]
-    ) app-arch/unzip app-arch/zip >=dev-util/cbindgen-0.24.0 >=net-libs/nodejs-14.19.3
+  BDEPEND: '|| ( dev-lang/python:3.8[ncurses,sqlite,ssl] dev-lang/python:3.9[ncurses,sqlite,ssl]
+    dev-lang/python:3.7[ncurses,sqlite,ssl] dev-lang/python:3.10[ncurses,sqlite,ssl]
+    ) app-arch/unzip app-arch/zip >=dev-util/cbindgen-0.26.0 >=net-libs/nodejs-14.19.3
     virtual/pkgconfig >=virtual/rust-1.59.0 || ( ( sys-devel/clang:13 sys-devel/llvm:13
     clang? ( =sys-devel/lld-13* pgo? ( =sys-libs/compiler-rt-sanitizers-13*[profile]
     ) ) ) ( sys-devel/clang:11 sys-devel/llvm:11 clang? ( =sys-devel/lld-11* pgo?
@@ -135,10 +135,10 @@ labels:
     l10n_hsb l10n_hu l10n_hy-AM l10n_ia l10n_id l10n_is l10n_it l10n_ja l10n_ka l10n_kab
     l10n_kk l10n_km l10n_kn l10n_ko l10n_lij l10n_lt l10n_lv l10n_mk l10n_mr l10n_ms
     l10n_my l10n_nb-NO l10n_ne-NP l10n_nl l10n_nn-NO l10n_oc l10n_pa-IN l10n_pl l10n_pt-BR
-    l10n_pt-PT l10n_rm l10n_ro l10n_ru l10n_sc l10n_sco l10n_si l10n_sk l10n_sl l10n_son
-    l10n_sq l10n_sr l10n_sv-SE l10n_szl l10n_ta l10n_te l10n_tg l10n_th l10n_tl l10n_tr
-    l10n_trs l10n_uk l10n_ur l10n_uz l10n_vi l10n_xh l10n_zh-CN l10n_zh-TW geckodriver
-    +gmp-autoupdate screencast +X kernel_linux pgo
+    l10n_pt-PT l10n_rm l10n_ro l10n_ru l10n_sat l10n_sc l10n_sco l10n_si l10n_sk l10n_sl
+    l10n_son l10n_sq l10n_sr l10n_sv-SE l10n_szl l10n_ta l10n_te l10n_tg l10n_th l10n_tl
+    l10n_tr l10n_trs l10n_uk l10n_ur l10n_uz l10n_vi l10n_xh l10n_zh-CN l10n_zh-TW
+    geckodriver +gmp-autoupdate screencast +X kernel_linux pgo
   RDEPEND: dev-libs/glib:2 dev-libs/atk dev-libs/expat dev-libs/libffi:= dev-libs/nss
     >=dev-libs/nspr-4.32 media-libs/alsa-lib media-libs/fontconfig media-libs/freetype
     media-libs/mesa media-video/ffmpeg sys-libs/zlib virtual/freedesktop-icon-theme
@@ -162,4 +162,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/firefox
   original.package.slot: "0"
-  original.package.version: 118.0.2
+  original.package.version: "120.0"
