--- a/packages/atoms/browsers/www-client/google-chrome/definition.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome/definition.yaml
@@ -1,5 +1,5 @@
 name: google-chrome
-version: 118.0.5993.70+2
+version: 119.0.6045.199
 category: www-client
 use_flags:
 - -selinux
@@ -66,4 +66,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/google-chrome
   original.package.slot: "0"
-  original.package.version: 118.0.5993.70
+  original.package.version: 119.0.6045.199
