--- a/packages/atoms/desktop/dev-python/lockfile/build.yaml
+++ b/packages/atoms/desktop/dev-python/lockfile/build.yaml
@@ -1,4 +1,9 @@
 prelude:
+# Temporary
+- >-
+  luet repo update &&
+  luet upgrade -y &&
+  luet cleanup --purge-repos
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
