--- a/packages/atoms/desktop/dev-python/lockfile/definition.yaml
+++ b/packages/atoms/desktop/dev-python/lockfile/definition.yaml
@@ -1,5 +1,5 @@
 name: lockfile
-version: 0.12.2
+version: 0.12.2+1
 category: dev-python
 use_flags:
 - -doc
@@ -49,4 +49,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/lockfile
   original.package.slot: "0"
-  original.package.version: 0.12.2-r1
+  original.package.version: 0.12.2
