--- a/packages/atoms/base/sys-libs/cracklib/definition.yaml
+++ b/packages/atoms/base/sys-libs/cracklib/definition.yaml
@@ -10,12 +10,9 @@ use_flags:
 - python_targets_python3_9
 - zlib
 requires:
-- name: python
+- name: zlib
   version: '>=0'
-  category: dev-lang-3.9
-- name: python-exec
-  version: '>=0'
-  category: dev-lang-2
+  category: sys-libs
 annotations:
   subsets:
     rules:
